New endpoint to edit location
